--- a/src/main/resources/templates/contractPage.html
+++ b/src/main/resources/templates/contractPage.html
@@ -3,20 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contract Page</title>
-    <style>
-        output {
-            font-weight: bold;
-        }
-
-        .form-style-2-heading {
-            font-weight: bold;
-            border-bottom: 2px solid #ddd;
-            margin-bottom: 20px;
-            font-size: 15px;
-            padding-bottom: 3px;
-
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{../static/css/main.css}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
