--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,118 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>-->
-    <!--    <link th:href="@{/css/main.css}" rel="stylesheet"/>-->
-    <style>
-        input {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        .error {
-            color: red;
-        }
-
-        .form-style-2 {
-            max-width: 500px;
-            padding: 20px 12px 10px 20px;
-            font: 13px Arial, Helvetica, sans-serif;
-        }
-
-        .form-style-2-heading {
-            font-weight: bold;
-            border-bottom: 2px solid #ddd;
-            margin-bottom: 20px;
-            font-size: 15px;
-            padding-bottom: 3px;
-
-        }
-
-        h2 {
-            font-size: 14px;
-        }
-
-        .form-style-2 label {
-            display: block;
-        }
-
-        .form-style-2 label > span {
-            width: 100px;
-            font-weight: bold;
-            float: left;
-            padding-top: 8px;
-            padding-right: 5px;
-        }
-
-        .form-style-2 span.required {
-            color: red;
-        }
-
-        .form-style-2 .tel-number-field {
-            width: 40px;
-            text-align: center;
-        }
-
-        .form-style-2 input.input-field, .form-style-2 .select-field {
-            width: 48%;
-        }
-
-        .form-style-2 input.input-field,
-        .form-style-2 .tel-number-field,
-        .form-style-2 .textarea-field,
-        .form-style-2 .select-field {
-            box-sizing: border-box;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            border: 1px solid #C2C2C2;
-            box-shadow: 1px 1px 4px #EBEBEB;
-            -moz-box-shadow: 1px 1px 4px #EBEBEB;
-            -webkit-box-shadow: 1px 1px 4px #EBEBEB;
-            border-radius: 3px;
-            -webkit-border-radius: 3px;
-            -moz-border-radius: 3px;
-            padding: 7px;
-            outline: none;
-        }
-
-        .form-style-2 .input-field:focus,
-        .form-style-2 .tel-number-field:focus,
-        .form-style-2 .textarea-field:focus,
-        .form-style-2 .select-field:focus {
-            border: 1px solid #0C0;
-        }
-
-        .form-style-2 .textarea-field {
-            height: 100px;
-            width: 55%;
-        }
-
-        .form-style-2 input[type=submit],
-        .form-style-2 input[type=button] {
-            border: none;
-            padding: 8px 15px 8px 15px;
-            background: #FF8500;
-            color: #fff;
-            box-shadow: 1px 1px 4px #DADADA;
-            -moz-box-shadow: 1px 1px 4px #DADADA;
-            -webkit-box-shadow: 1px 1px 4px #DADADA;
-            border-radius: 3px;
-            -webkit-border-radius: 3px;
-            -moz-border-radius: 3px;
-        }
-
-        .form-style-2 input[type=submit]:hover,
-        .form-style-2 input[type=button]:hover {
-            background: #EA7B00;
-            color: #fff;
-        }
-
-    </style>
+    <link rel="stylesheet" th:href="@{../static/css/main.css}"/>
     <title>Credit Request</title>
 </head>
 <body>
@@ -162,19 +51,13 @@
                    th:errors="*{dateOfPassportReceiving}"></label>
         </div>
         <div>
-            <table>
-                <tr>
-                    <td>Семейное положение:</td>
-                    <td>
-                        <select th:field="*{maritalStatus}">
-                            <option th:each="el : ${mStatuses}"
-                                    th:value="${el}"
-                                    th:utext="${el}">
-                            </option>
-                        </select>
-                    </td>
-                </tr>
-            </table>
+            Семейное положение:
+            <select th:field="*{maritalStatus}">
+                <option th:each="el : ${mStatuses}"
+                        th:value="${el}"
+                        th:utext="${el}">
+                </option>
+            </select>
         </div>
         <h2>Место работы</h2>
         <div class="form-group">
