--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -13,7 +13,7 @@
     </tr>
     <tr>
         <td>
-            <button id="button-submit-1">Вывести всех пользователей</button>
+            <button id="getUsers">Вывести всех пользователей</button>
         </td>
         <td id="main-output" rowspan="4">
 
@@ -21,19 +21,19 @@
     </tr>
     <tr>
         <td>
-            <button id="button-submit-2">Вывести все заявки</button>
+            <button id="getRequests">Вывести все заявки</button>
         </td>
     </tr>
     <tr>
         <td>
-            <button id="button-submit-3">Вывести все договоры</button>
+            <button id="getContracts">Вывести все договоры</button>
         </td>
     </tr>
     <tr>
         <td>
             <label for="main-input"></label><input style="" id="main-input" value=""
                                                    placeholder="ФИО, телефон, серия и номер паспорта">
-            <button id="button-submit-4">Поиск</button>
+            <button id="search">Поиск</button>
         </td>
     </tr>
     <tr>
