Change spring data jpa on hibernate,make some fixes

--- a/src/main/resources/templates/contractPage.html
+++ b/src/main/resources/templates/contractPage.html
@@ -59,18 +59,13 @@
         <form th:object="${contract}">
             <label>Статус кредита:</label>
             <div th:switch="${contract.getStatus()}">
-                <output th:case="${contractStatuses[0]}">Подписан
-                    <div>
-                        <output>Поздравляем, договор подписан!</output>
-                    </div>
-                </output>
-                <output th:case="*">Не подписан
-                    <div>
-                        <button
-                                type="submit" class="btn btn-success">Подписать контракт
-                        </button>
-                    </div>
-                </output>
+                <output th:case="${contractStatuses[0]}">Подписан</output>
+                <output th:case="*">Не подписан</output>
+            </div>
+            <div th:switch="${contract.getStatus()}">
+                <button th:case="${contractStatuses[1]}" type="submit" class="btn btn-success">Подписать контракт
+                </button>
+                <output th:case="*">Поздравляем, договор подписан!</output>
             </div>
         </form>
     </form>
