--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -31,12 +31,20 @@
     </tr>
     <tr>
         <td>
-            <label for="main-input"></label><input style="" id="main-input" value=""
-                                                   placeholder="ФИО, телефон, серия и номер паспорта">
-            <button id="search">Поиск</button>
+            <div>
+                <label for="fullNameInput"></label><input style="" id="fullNameInput" value="" placeholder="ФИО">
+                <button id="fullNameSearch">Поиск</button>
+            </div>
+            <div>
+                <label for="telephoneInput"></label><input style="" id="telephoneInput" value="" placeholder="Телефон">
+                <button id="telephoneSearch">Поиск</button>
+            </div>
+            <div>
+                <label for="passportInput"></label><input style="" id="passportInput" value="" placeholder="Серия и номер паспорта">
+                <button id="passportSearch">Поиск</button>
+            </div>
         </td>
     </tr>
-    <tr>
     </tr>
 </table>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
