--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -32,16 +32,9 @@
     <tr>
         <td>
             <div>
-                <label for="fullNameInput"></label><input style="" id="fullNameInput" value="" placeholder="ФИО">
-                <button id="fullNameSearch">Поиск</button>
-            </div>
-            <div>
-                <label for="telephoneInput"></label><input style="" id="telephoneInput" value="" placeholder="Телефон">
-                <button id="telephoneSearch">Поиск</button>
-            </div>
-            <div>
-                <label for="passportInput"></label><input style="" id="passportInput" value="" placeholder="Серия и номер паспорта">
-                <button id="passportSearch">Поиск</button>
+                <label for="AllParametersInput"></label>
+                <input style="" id="AllParametersInput" value="" placeholder="ФИО, телефон, серия и номер паспорта">
+                <button id="AllParametersSearch">Поиск</button>
             </div>
         </td>
     </tr>
